# acl2-kernel

./: .dockerignore  .gitpod.yml  Dockerfile  Example.ipynb  LICENSE.md  README.md  isort.lisp  pyproject.toml
acl2_kernel/: __init__.py  __main__.py  install.py  kernel.py
example/: .dockerignore  Dockerfile
