[tool.poetry]
name = "acl2-kernel"
version = "0.2.2"
description = "Jupyter Kernel for ACL2"
authors = ["TANIGUCHI Masaya <mew@cat.ovh>"]
license = "Apache-2.0"
exclude = ["**/*.ipynb", "Dockerfile", ".dockerignore"]
homepage = "https://github.com/tani/acl2-kernel"
repository = "https://github.com/tani/acl2-kernel.git"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
pexpect = "^4.8.0"
ipykernel = "^5.3.0"
jupyter_client = "^6.1.3"
ipython = "^7.15.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
python-language-server = "^0.33.1"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
