[tool.poetry]
name = "acl2-kernel"
version = "0.3.1"
description = "Jupyter Kernel for ACL2"
authors = ["TANIGUCHI Masaya <m@docs.casa>"]
license = "Apache-2.0"
exclude = ["**/*.ipynb", "Dockerfile", ".dockerignore"]
homepage = "https://github.com/tani/acl2-kernel"
repository = "https://github.com/tani/acl2-kernel.git"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pexpect = "^4.8.0"
ipykernel = "^6.6.0"
jupyter_client = "^6.1.3"
ipython = "^7.16.2"
regex = "^2023.0.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
python-language-server = "^0.36.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
